--- a/build.gradle
+++ b/build.gradle
@@ -29,13 +29,17 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-security'
+    implementation 'org.springframework.security:spring-security-crypto:6.2.3'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-validation'
     implementation 'org.springframework.boot:spring-boot-devtools'
+    // https://mvnrepository.com/artifact/org.springframework.cloud/spring-cloud-starter-openfeign
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.slf4j:jcl-over-slf4j:2.0.12'
     // JWT 라이브러리
     implementation 'io.jsonwebtoken:jjwt:0.12.5'
+    compileOnly 'io.jsonwebtoken:jjwt-api:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-impl:0.12.5'
     runtimeOnly 'io.jsonwebtoken:jjwt-jackson:0.12.5'
     implementation 'javax.xml.bind:jaxb-api:2.3.1'
