--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,4 +25,6 @@ security:
   jwt:
     key: F5248D1EE2A8DC29BCB45C44B4937238923892390abdDKSLKDL
     expirationMs : 3600000
+  encryption:
+    salt: 5c0744940b5c369b
 
