--- a/build.gradle
+++ b/build.gradle
@@ -37,6 +37,9 @@ dependencies {
     implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:4.1.1'
     implementation 'org.mapstruct:mapstruct:1.5.5.Final'
     implementation 'org.slf4j:jcl-over-slf4j:2.0.12'
+    // https://mvnrepository.com/artifact/com.google.code.gson/gson
+    implementation 'com.google.code.gson:gson:2.10.1'
+
     // JWT 라이브러리
     implementation 'io.jsonwebtoken:jjwt:0.12.5'
     compileOnly 'io.jsonwebtoken:jjwt-api:0.12.5'
@@ -53,6 +56,8 @@ dependencies {
     testImplementation 'org.junit.jupiter:junit-jupiter-api'
     testImplementation 'org.springframework.restdocs:spring-restdocs-mockmvc'
     testImplementation 'org.springframework.security:spring-security-test'
+    // https://mvnrepository.com/artifact/org.mockito/mockito-core
+    testImplementation 'org.mockito:mockito-core:5.12.0'
 }
 
 tasks.named('test') {
