--- a/build.gradle
+++ b/build.gradle
@@ -1,40 +1,34 @@
 plugins {
     id 'java'
-    id 'org.springframework.boot' version '3.3.0'
-    id 'io.spring.dependency-management' version '1.1.5'
+    id 'org.springframework.boot' version '3.2.4'
+    id 'io.spring.dependency-management' version '1.1.4'
+    id 'org.graalvm.buildtools.native' version '0.10.2'
 }
 
-
-configurations {
-    compileOnly {
-        extendsFrom annotationProcessor
+allprojects {
+    repositories {
+        mavenCentral()
     }
 }
+
 
 
 subprojects {
 
-    group 'com.parkkb'
-    version '0.0.1-SNAPSHOT'
-    sourceCompatibility = '17'
-
-    apply plugin: 'java-library'
-    apply plugin: 'org.springframework.boot'
+    apply plugin: 'java'
     apply plugin: 'io.spring.dependency-management'
+    apply plugin: 'org.springframework.boot'
 
-    configurations {
-        compileOnly{
-            extendsFrom annotationProcessor
-        }
-    }
+    sourceCompatibility = '21'
+    targetCompatibility = '21'
 
     dependencies {
-        implementation 'org.springframework.boot:spring-boot-starter'
         testImplementation 'org.springframework.boot:spring-boot-starter-test'
     }
+
 }
 
-bootJar {
+bootJar{
     enabled = false
 }
 
@@ -42,6 +36,3 @@ jar{
     enabled = true
 }
 
-test {
-    useJUnitPlatform()
-}
