module api와 core로 분리

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name = 'spring-boot-boilerplate'
-include 'module-api'
-include 'module-batch'
+include 'api-module'
+include 'batch-module'
 
